Renamed dtds from 1.0-m01 to 0.1. Minor fixes to release, subversion and docbook catlogue