@@ -72,6 +72,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
+import java.util.TreeMap;
 
 
 /**
@@ -1050,7 +1051,12 @@ public class DefaultProjectModel implements ProjectModel {
                 classPath.append(existing); // Make sure additions override existing
             }
 
-            loader = antProject.createClassLoader(classPath);
+            if ("true".equals(antProject.getProperty("quokka.project.debugclassloaders"))) {
+                loader = new QuokkaLoader(target, antProject.getClass().getClassLoader(), antProject, classPath);
+            } else {
+                loader = antProject.createClassLoader(classPath);
+            }
+
             loader.setParent(antProject.getCoreLoader());
             loader.setParentFirst(true);
             loader.setIsolated(false);
@@ -1182,5 +1188,72 @@ public class DefaultProjectModel implements ProjectModel {
         }
 
         return applied;
+    }
+
+    //~ Inner Classes --------------------------------------------------------------------------------------------------
+
+    /**
+     * QuokkaLoader is a class loader that keeps track of the number of class loaders
+     * allocated versus finalized to check for class laoder leaks. At present, the jalopy
+     * plugin is known the leak loaders, although the underlying cause has not been identified.
+     *
+     * Useful options:
+     *      Debugging:   QUOKKA_OPTS=-verbose:gc -XX:+PrintClassHistogram -XX:+PrintGCDetails
+     *      Work-around: QUOKKA_OPTS=-XX:MaxPermSize=128m
+     */
+    public static class QuokkaLoader extends AntClassLoader {
+        private static Map loaders = new TreeMap();
+        private String name;
+
+        public QuokkaLoader(Target target, ClassLoader parent, org.apache.tools.ant.Project project,
+            org.apache.tools.ant.types.Path classpath) {
+            super(parent, project, classpath);
+            name = target.getName();
+            add(1);
+        }
+
+        private static void initialise() {
+            Runtime.getRuntime().addShutdownHook(new Thread() {
+                    public void run() {
+                        System.out.println("Checking for leaking class loaders ...");
+                        System.gc();
+
+                        try {
+                            Thread.sleep(1000);
+                        } catch (InterruptedException e) {
+                            e.printStackTrace();
+                        }
+
+                        System.gc();
+
+                        for (Iterator i = loaders.entrySet().iterator(); i.hasNext();) {
+                            Map.Entry entry = (Map.Entry)i.next();
+                            System.out.println(entry.getKey() + " -> " + entry.getValue());
+                        }
+                    }
+                });
+        }
+
+        protected void finalize() throws Throwable {
+            super.finalize();
+            add(-1);
+        }
+
+        private void add(int i) {
+            synchronized (loaders) {
+                if (loaders.size() == 0) {
+                    initialise();
+                }
+
+                Integer count = (Integer)loaders.get(name);
+
+                if (count == null) {
+                    count = new Integer(0);
+                }
+
+                count = new Integer(count.intValue() + i);
+                loaders.put(name, count);
+            }
+        }
     }
 }
